v3/crates/metadata-resolve/tests/failing/commands/duplicate_argument/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/commands/duplicate_argument/metadata.json
---
Error: the following argument in command function_with_duplicate_args (in subgraph default) is defined more than once: duplicate_argument
    ╭─[ <unknown>:18:25 ]
    │
 18 │                 "name": "duplicate_argument",
    │                         ──────────┬─────────  
    │                                   ╰─────────── Command 'function_with_duplicate_args' has a duplicate argument definition for 'duplicate_argument'
────╯
